--- a/church_bootstrap.html
+++ b/church_bootstrap.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Repo Test</title>
   </head>
   <body>
     <div class="container text-center pt-4">
