pushing bootstrap files

--- a/church.html
+++ b/church.html
@@ -16,7 +16,7 @@
     
     <ul class="ul_2">
       <li><a class="left" href="#home">HOME</a></li>
-      <li><a class="semi-left" href="#calendar">CALENDAR</a></li>
+      <li><a class="semi-left" href="#calendar">DATES</a></li>
       <li><a class="center" href="#ministries">MINISTRIES</a></li>
       <li><a class="semi-right" href="#testimonials">TESTIMONIALS</a></li>
       <li><a class="right" href="#contact">CONTACT US</a></li>
